# stringmatch

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: Financial Column Names Analysis.ipynb  Predicting Column Names.ipynb
resources/: all_versions_of_columns.xlsx  columns_matched_reviewed_description.csv  financial_accounts_column_matching.xlsx
resources/weights/: df_weights_score_jaro.csv  df_weights_score_jaro_winkler.csv  df_weights_score_lev.csv
src/stringmatch/: __init__.py  model.py
src/stringmatch/config/: logging.py
