[project]
name = "stringmatch"
license = {file = "LICENSE"}
description = "This package helps to match one string to its nearest match. A good usage is to go from abbreviations to full length column names."
readme = "README.md"
dependencies = [
                "fastDamerauLevenshtein==1.0.7",
                "Levenshtein==0.20.8",
                "numpy==1.23.5",
                "pandas==1.5.2",
                "python-dateutil==2.8.2",
                "python-Levenshtein==0.20.8",
                "pytz==2022.6",
                "rapidfuzz==2.13.3",
                "six==1.16.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "coverage"]

[project.scripts]

[tool.black]


[tool.setuptools.dynamic]
version = {attr = "stringmatch.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
